# Multi-Layer-Perceptron

./: README.md  pyproject.toml  yatch design regression example.ipynb
examples/: mnistDigits_Classification.py  yatchDesign_Regression.py
examples/data/: .~lock.yacht_hydrodynamics.csv#
examples/helpers/: YatchDesign.py  mnist.py  split_mnist.py
examples/output/: mnist.txt
main/: MultiLayerPerceptron.py  __init__.py  utils.py
main/output/: MLP_final.json  MLP_init.json  anomaly detection - credit card fraud .json
