[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-multi-layer-perceptron"
version = "0.1.0"
description = "A simple Multi-Layer Perceptron implementation"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[tool.setuptools.packages.find]
include = ["main", "helpers"]